                CHANGES in vsa version 0.3-0 (2011-05-22)
ENHANCEMENTS
    o   Added tests using scriptests
    o	Added matrix-based memory (initial memory is list based)
    o	Started adding efficiency improvements