@@ -1,6 +1,6 @@
 useDynLib(vsa)
 # Generics that have methods for subclasses of vsa
-export(newVec, vsaprod, vsapower, appinv, dot, equiv, cosine, norm, mag, add, addnorm, vsascale, conformable, simval, scalar)
+export(newVec, vsaprod, vsapower, appinv, dot, equiv, cosine, vnorm, mag, add, addnorm, vsascale, conformable, simval, scalar)
 # Functions for vsa objects (don't need specific methods for subclsses)
 export("%.%", "%==%", "%cos%", elts)
 # Functions for working with 'vsamem' objects
@@ -48,7 +48,7 @@ S3method(appinv, realhrr)
 S3method(dot, realhrr)
 S3method(equiv, realhrr)
 S3method(cosine, realhrr)
-S3method(norm, realhrr)
+S3method(vnorm, realhrr)
 S3method(mag, realhrr)
 S3method(add, realhrr)
 S3method(vsascale, realhrr)
@@ -60,7 +60,7 @@ S3method(appinv, drep)
 S3method(dot, drep)
 S3method(equiv, drep)
 S3method(cosine, drep)
-S3method(norm, drep)
+S3method(vnorm, drep)
 S3method(mag, drep)
 S3method(add, drep)
 S3method(vsascale, drep)
